--- a/Autobot/Base.lproj/Main.storyboard
+++ b/Autobot/Base.lproj/Main.storyboard
@@ -220,6 +220,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
                                 <state key="normal" title="Resend the confirmation code"/>
+                                <connections>
+                                    <action selector="resend:" destination="PHo-9M-Inf" eventType="touchUpInside" id="82i-H0-ZAV"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lb9-ge-4XN">
                                 <rect key="frame" x="16" y="306" width="343" height="54"/>
@@ -228,10 +231,25 @@
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="28"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Complete registration"/>
+                                <connections>
+                                    <action selector="confirm:" destination="PHo-9M-Inf" eventType="touchUpInside" id="tMq-yi-1K3"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Code sent to: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Le-r1-3Hz">
+                                <rect key="frame" x="186" y="83" width="108" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.001564681064" green="0.059898532929999998" blue="0.16380020980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="confirmCode" destination="x6l-7a-SEb" id="tIE-Eg-6OF"/>
+                        <outlet property="sentToLabel" destination="1Le-r1-3Hz" id="sEU-XL-uDo"/>
+                        <outlet property="userName" destination="BXY-FQ-SPG" id="0E1-Pc-RjD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DXb-Rf-ccf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -271,7 +289,7 @@
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Forgot password"/>
                                 <connections>
-                                    <segue destination="8NE-Ri-BW2" kind="show" id="H2W-HR-DGf"/>
+                                    <action selector="forgotPassword:" destination="TeZ-1q-uHS" eventType="touchUpInside" id="Z48-Qc-kdu"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PAW-sD-0DS">
@@ -282,6 +300,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.001564681064" green="0.059898532929999998" blue="0.16380020980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="userName" destination="sDy-xD-7zD" id="eXn-GD-URF"/>
+                        <segue destination="8NE-Ri-BW2" kind="show" id="0xY-hf-PAC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qhA-kF-cea" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -334,10 +356,17 @@
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="24"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Reset password"/>
+                                <connections>
+                                    <action selector="updatePassword:" destination="8NE-Ri-BW2" eventType="touchUpInside" id="9Yq-FD-U7i"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.001564681064" green="0.059898532929999998" blue="0.16380020980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="confirmationcode" destination="qkd-u7-y90" id="Nji-Jw-tgg"/>
+                        <outlet property="proposedPassword" destination="1VX-YL-RiJ" id="33k-vL-Vi4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mqp-Ve-B3B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
