--- a/Autobot/Base.lproj/Main.storyboard
+++ b/Autobot/Base.lproj/Main.storyboard
@@ -395,7 +395,20 @@
                             <outlet property="delegate" destination="ynR-W5-yBW" id="5MX-Jm-vLB"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="SzV-0N-TYn"/>
+                    <navigationItem key="navigationItem" id="SzV-0N-TYn">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="wzf-ud-Ety">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iQs-6q-mVN">
+                                <rect key="frame" x="16" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="SignOut">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <connections>
+                                <action selector="signOut:" destination="ynR-W5-yBW" id="Gi5-Vj-sGK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6P-O6-M1y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
