--- a/Autobot/Base.lproj/Main.storyboard
+++ b/Autobot/Base.lproj/Main.storyboard
@@ -432,7 +432,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6P-O6-M1y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="735" y="912"/>
+            <point key="canvasLocation" x="735" y="931"/>
+        </scene>
+        <!--Add Device View Controller-->
+        <scene sceneID="mPF-H2-BLR">
+            <objects>
+                <viewController id="9VF-jf-Dwn" customClass="AddDeviceViewController" customModule="Autobot" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NOz-Rh-x8I"/>
+                        <viewControllerLayoutGuide type="bottom" id="F3B-tu-E3P"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NAe-3p-W6b">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q8R-Es-owO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1549" y="931"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qq5-85-5qC">
