Add Device cells

--- a/Autobot/RaspberryPi3Main.storyboard
+++ b/Autobot/RaspberryPi3Main.storyboard
@@ -100,7 +100,7 @@
         <!--Navigation Controller-->
         <scene sceneID="euX-u0-U4G">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WG1-sI-BNF" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="RaspberryPi3" automaticallyAdjustsScrollViewInsets="NO" id="WG1-sI-BNF" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="j00-nU-QvB">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
